--- a/.github/workflows/built_twrp.yml
+++ b/.github/workflows/built_twrp.yml
@@ -11,7 +11,7 @@ on:
         options:
         - cannong
         - messi
-        - X6710
+        - adt3
         - golf
         - nashc
         - cap_sprout
